# Online-Shop

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  adminwindow.ui  authwindow.cpp  authwindow.cpp.autosave  authwindow.h  authwindow.ui  clientmanager.cpp  clientmanager.h  clientwindow.cpp  clientwindow.h  clientwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managerwindow.cpp  managerwindow.h  managerwindow.ui
server/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  databasemanager.cpp  databasemanager.h  main.cpp  models.cpp  models.h  tcpserver.cpp  tcpserver.h
